--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
+    "@mantine/next": "^5.9.5",
+    "@tabler/icons": "^1.118.0",
     "bootstrap": "^5.2.2",
+    "fs": "^0.0.1-security",
     "next": "12.3.1",
+    "promises": "^0.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.0",
+    "typed.js": "^2.0.12",
+    "typewriter-effect": "^2.19.0",
+    "wc-typed-js": "^1.0.1",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.26",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "^12.0.4"
   }
 }
