--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^5.75.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "eslint": "8.23.1",
     "eslint-config-next": "^12.0.4"
