--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "devDependencies": {
     "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.23.1",
-    "eslint-config-next": "^12.0.4"
+    "eslint-config-next": "^12.0.4",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
