--- a/pages/projects/myProjects.json
+++ b/pages/projects/myProjects.json
@@ -12,7 +12,7 @@
         "5", "7", "Figma"
       ],
       "photo":"/projects/Portfolio2.png",
-      "description":"The main goals of this project was to discover an unknown technologie (NextJs) and to remake and update the first version of my portfolio."
+      "description":"The main goals of this project was to discover NextJs and to remake and update the first version of my portfolio."
     },
     {
       "id" : "9",
